--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_timeline">Home Timeline</string>
     <string name="login_label">Connect to Twitter</string>
+    <string name="_140">140</string>
+    <string name="tweet">Tweet</string>
+    <string name="what_apos_s_happening">What\'s happening?</string>
 
 </resources>
