--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="_140">140</string>
     <string name="tweet">Tweet</string>
     <string name="what_apos_s_happening">What\'s happening?</string>
+    <string name="title_activity_Compose" />
 
 </resources>
